Added more SonarQube Fixes